--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-email": "2.1.5",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.52.1",
     "react-markdown": "^9.0.1",
     "react-use": "^17.5.1",
