--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-email": "2.1.5",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-use": "^17.5.1",
     "recharts": "^2.12.7",
