--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.4",
     "typescript-eslint": "^7.17.0",
-    "unified": "^11.0.5"
+    "unified": "^11.0.5",
+    "micromatch" : " 4.0.8"
   }
 }
