--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+.vscode
 
 # testing
 /coverage
@@ -35,5 +36,3 @@ yarn-error.log*
 *.tsbuildinfo
 
 .env
-
-.cursorrules
