--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "react-email": "2.1.5",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.52.1",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-use": "^17.5.1",
     "recharts": "^2.12.7",
@@ -88,7 +88,6 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "next": "14.2.10",
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.7.0",
@@ -101,21 +100,22 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "@typescript-eslint/parser": "^7.17.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.7.0",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.2.5",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "5.1.0-rc-d025ddd3-20240722",
     "eslint-plugin-tailwindcss": "^3.17.4",
     "globals": "^15.8.0",
+    "micromatch": "4.0.8",
+    "next": "14.2.10",
     "postcss": "^8.4.39",
     "prettier": "^3.3.3",
     "prisma": "^5.17.0",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.4",
     "typescript-eslint": "^7.17.0",
-    "unified": "^11.0.5",
-    "micromatch" : " 4.0.8"
+    "unified": "^11.0.5"
   }
 }
