--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "lucide-react": "^0.414.0",
     "mini-svg-data-uri": "^1.4.4",
     "nanoid": "^5.0.7",
-    "next-auth": "5.0.0-beta.19",
+    "next-auth": "^5.0.0-beta.25",
     "next-mdx-remote-client": "^1.0.3",
     "next-plausible": "^3.12.0",
     "next-safe-action": "^7.4.2",
@@ -66,7 +66,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "react-email": "2.1.5",
+    "react-email": "^3.0.7",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.3.0",
