--- a/package.json
+++ b/package.json
@@ -17,105 +17,105 @@
     "clean": "next lint --fix && tsc --noEmit && prettier --write ."
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.4.1",
-    "@hookform/resolvers": "^3.9.0",
+    "@auth/prisma-adapter": "^2.7.4",
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.3.1",
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-alert-dialog": "^1.1.1",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.2",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@react-email/components": "0.0.21",
     "@react-email/html": "0.0.8",
     "@react-email/tailwind": "0.0.18",
-    "@stripe/react-stripe-js": "^2.7.3",
-    "@stripe/stripe-js": "^4.1.0",
-    "@t3-oss/env-nextjs": "^0.11.0",
-    "@tanstack/react-query": "^5.51.11",
+    "@stripe/react-stripe-js": "^2.9.0",
+    "@stripe/stripe-js": "^4.10.0",
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-query": "^5.66.0",
     "ajv": "^8.17.1",
     "canvas-confetti": "^1.9.3",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies": "^0.9.1",
     "date-fns": "^3.6.0",
-    "framer-motion": "^11.3.8",
+    "framer-motion": "^11.18.2",
     "front-matter": "^4.0.2",
     "geist": "^1.3.1",
     "lucide-react": "^0.414.0",
     "mini-svg-data-uri": "^1.4.4",
-    "nanoid": "^5.0.7",
-    "next-auth": "^5.0.0-beta.25",
-    "next-mdx-remote-client": "^1.0.3",
-    "next-plausible": "^3.12.0",
-    "next-safe-action": "^7.4.2",
+    "nanoid": "^5.0.9",
+    "next-auth": "5.0.0-beta.25",
+    "next-mdx-remote-client": "^1.0.7",
+    "next-plausible": "^3.12.4",
+    "next-safe-action": "^7.10.3",
     "next-themes": "^0.3.0",
     "nprogress": "^0.2.0",
-    "nuqs": "^1.17.5",
+    "nuqs": "^1.20.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-email": "^3.0.7",
     "react-feather": "^2.0.10",
-    "react-hook-form": "^7.52.1",
-    "react-icons": "^5.3.0",
-    "react-markdown": "^9.0.1",
-    "react-use": "^17.5.1",
-    "recharts": "^2.12.7",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
+    "react-use": "^17.6.0",
+    "recharts": "^2.15.1",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-prism-plus": "^2.0.0",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "resend": "^3.5.0",
-    "sass": "^1.77.8",
-    "sonner": "^1.5.0",
-    "stripe": "^16.2.0",
-    "tailwind-merge": "^2.4.0",
+    "sass": "^1.84.0",
+    "sonner": "^1.7.4",
+    "stripe": "^16.12.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tslog": "^4.9.3",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.4"
+    "zod": "^3.24.2",
+    "zustand": "^4.5.6"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.7.0",
-    "@next/eslint-plugin-next": "^14.2.5",
-    "@tailwindcss/typography": "^0.5.13",
-    "@types/canvas-confetti": "^1.6.4",
+    "@eslint/compat": "^1.2.6",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.20.0",
+    "@next/eslint-plugin-next": "^14.2.24",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/cookies": "^0.9.0",
-    "@types/node": "^20.14.11",
+    "@types/node": "^20.17.18",
     "@types/nprogress": "^0.2.3",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.56.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.5",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "5.1.0-rc-d025ddd3-20240722",
-    "eslint-plugin-tailwindcss": "^3.17.4",
-    "globals": "^15.8.0",
+    "eslint-plugin-tailwindcss": "^3.18.0",
+    "globals": "^15.15.0",
     "micromatch": "4.0.8",
     "next": "14.2.21",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.3",
+    "postcss": "^8.5.2",
+    "prettier": "^3.5.1",
     "prisma": "^6.3.1",
-    "tailwindcss": "^3.4.6",
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^7.17.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^7.18.0",
     "unified": "^11.0.5"
   }
 }
