--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "zustand": "^4.5.6"
   },
   "devDependencies": {
+    "esbuild": ">=0.25.0",
     "@eslint/compat": "^1.2.6",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.20.0",
