--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@calcom/embed-react": "^1.5.2",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-accordion": "^1.2.3",
