--- a/package.json
+++ b/package.json
@@ -17,36 +17,36 @@
     "clean": "next lint --fix && tsc --noEmit && prettier --write ."
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.7.4",
-    "@calcom/embed-react": "^1.5.2",
+    "@auth/prisma-adapter": "^2.10.0",
+    "@calcom/embed-react": "^1.5.3",
     "@hookform/resolvers": "^3.10.0",
-    "@prisma/client": "^6.10.0",
-    "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-alert-dialog": "^1.1.6",
-    "@radix-ui/react-aspect-ratio": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-progress": "^1.1.2",
-    "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.3",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-toast": "^1.2.6",
-    "@radix-ui/react-toggle": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.8",
+    "@prisma/client": "^6.11.0",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@react-email/components": "0.0.21",
     "@react-email/html": "0.0.8",
     "@react-email/tailwind": "0.0.18",
     "@stripe/react-stripe-js": "^2.9.0",
     "@stripe/stripe-js": "^4.10.0",
     "@t3-oss/env-nextjs": "^0.11.1",
-    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query": "^5.81.5",
     "ajv": "^8.17.1",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
@@ -55,14 +55,14 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.18.2",
     "front-matter": "^4.0.2",
-    "geist": "^1.3.1",
+    "geist": "^1.4.2",
     "lucide-react": "^0.414.0",
     "mini-svg-data-uri": "^1.4.4",
-    "nanoid": "^5.0.9",
+    "nanoid": "^5.1.5",
     "next-auth": "5.0.0-beta.25",
-    "next-mdx-remote-client": "^1.0.7",
+    "next-mdx-remote-client": "^1.1.1",
     "next-plausible": "^3.12.4",
-    "next-safe-action": "^7.10.3",
+    "next-safe-action": "^7.10.8",
     "next-themes": "^0.3.0",
     "nprogress": "^0.2.0",
     "nuqs": "^1.20.0",
@@ -71,54 +71,54 @@
     "react-dom": "^18.3.1",
     "react-email": "^3.0.7",
     "react-feather": "^2.0.10",
-    "react-hook-form": "^7.54.2",
-    "react-icons": "^5.4.0",
-    "react-markdown": "^9.0.3",
+    "react-hook-form": "^7.59.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^9.1.0",
     "react-use": "^17.6.0",
-    "recharts": "^2.15.1",
+    "recharts": "^2.15.4",
     "rehype-autolink-headings": "^7.1.0",
-    "rehype-prism-plus": "^2.0.0",
+    "rehype-prism-plus": "^2.0.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "resend": "^3.5.0",
-    "sass": "^1.84.0",
+    "sass": "^1.89.2",
     "sonner": "^1.7.4",
     "stripe": "^16.12.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tslog": "^4.9.3",
-    "zod": "^3.24.2",
-    "zustand": "^4.5.6"
+    "zod": "^3.25.67",
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.6",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.20.0",
-    "@next/eslint-plugin-next": "^14.2.24",
+    "@eslint/compat": "^1.3.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.30.1",
+    "@next/eslint-plugin-next": "^14.2.30",
     "@tailwindcss/typography": "^0.5.16",
     "@types/canvas-confetti": "^1.9.0",
-    "@types/cookies": "^0.9.0",
-    "@types/node": "^20.17.18",
+    "@types/cookies": "^0.9.1",
+    "@types/node": "^20.19.4",
     "@types/nprogress": "^0.2.3",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "autoprefixer": "^10.4.20",
-    "esbuild": ">=0.25.0",
+    "autoprefixer": "^10.4.21",
+    "esbuild": "^0.25.5",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.5",
-    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "5.1.0-rc-d025ddd3-20240722",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "globals": "^15.15.0",
     "micromatch": "4.0.8",
     "next": "14.2.21",
-    "postcss": "^8.5.2",
-    "prettier": "^3.5.1",
-    "prisma": "^6.10.1",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prisma": "^6.11.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^7.18.0",
     "unified": "^11.0.5"
   }
