--- a/package.json
+++ b/package.json
@@ -48,10 +48,15 @@
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "^5.81.5",
     "ajv": "^8.17.1",
+    "body-parser": "^2.2.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "connect": "^3.7.0",
+    "cookie": "^1.0.2",
     "cookies": "^0.9.1",
+    "cors": "^2.8.5",
+    "d3": "^7.9.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.18.2",
     "front-matter": "^4.0.2",
@@ -96,12 +101,45 @@
     "@eslint/js": "^9.30.1",
     "@next/eslint-plugin-next": "^14.2.30",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/body-parser": "^1.19.6",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/connect": "^3.4.38",
     "@types/cookies": "^0.9.1",
+    "@types/cors": "^2.8.19",
+    "@types/d3": "^7.4.3",
+    "@types/d3-array": "^3.2.1",
+    "@types/d3-color": "^3.1.3",
+    "@types/d3-ease": "^3.0.2",
+    "@types/d3-interpolate": "^3.0.4",
+    "@types/d3-path": "^3.1.1",
+    "@types/d3-scale": "^4.0.9",
+    "@types/d3-shape": "^3.1.7",
+    "@types/d3-time": "^3.0.4",
+    "@types/d3-timer": "^3.0.2",
+    "@types/debug": "^4.1.12",
+    "@types/estree": "^1.0.8",
+    "@types/estree-jsx": "^1.0.5",
+    "@types/express": "^5.0.3",
+    "@types/express-serve-static-core": "^5.0.7",
+    "@types/hast": "^3.0.4",
+    "@types/http-errors": "^2.0.5",
+    "@types/js-cookie": "^3.0.6",
+    "@types/keygrip": "^1.0.6",
+    "@types/mdast": "^4.0.4",
+    "@types/mdx": "^2.0.13",
+    "@types/ms": "^2.1.0",
     "@types/node": "^20.19.4",
+    "@types/normalize-package-data": "^2.4.4",
     "@types/nprogress": "^0.2.3",
+    "@types/prismjs": "^1.26.5",
+    "@types/prop-types": "^15.7.15",
+    "@types/qs": "^6.14.0",
+    "@types/range-parser": "^1.2.7",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@types/send": "^0.17.5",
+    "@types/serve-static": "^1.15.8",
+    "@types/unist": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.21",
