--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "remark-gfm": "^4.0.1",
     "resend": "^3.5.0",
     "sass": "^1.89.2",
+    "sharp": "^0.34.4",
     "sonner": "^1.7.4",
     "stripe": "^16.12.0",
     "tailwind-merge": "^2.6.0",
